--- a/templates/surf_entry_details.html
+++ b/templates/surf_entry_details.html
@@ -13,130 +13,164 @@
             background-position: bottom; 
             background-position-y: 15%;
         }
-
     </style>
     {% endblock %}
 <div class="content-container">
 
 
-    <div class="row">
+    <div class="row"> <!-- top row -->
 
-        <div class="col-md-9">
-            <h3>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}
-            at {{entry.loc.beach_name}}
+        <!-- when, where, with whom -->
+        <div class="col-md-9"> <!-- beach col -->
+
+            <h2>{{entry.loc.beach_name}}
             {% if entry.spot_name %}
-                ({{entry.spot_name}})
+                <small>({{entry.spot_name}})</small>
             {% endif %}
+            </h2>
+
+            <h3>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}
             {% if entry.go_out == "N" %}
-                (condition check: did not go out)
-            {% endif %}
-            {% if entry.buddy_name %}
-                with {{entry.buddy_name}}
-            {% else %}
-                {% if entry.go_out == "Y" %}
-                (Solo)
-                {% endif %}
+                <small>(condition check: did not go out)</small>
             {% endif %}
             </h3>
-        </div>
+
+            
+            {% if entry.buddy_name %}
+                <h3>(went out with {{entry.buddy_name}})</h3>
+            {% else %}
+                {% if entry.go_out == "Y" %}
+                <h4>(Solo)</h4>
+                {% endif %}
+            {% endif %}
+
+        </div> <!-- closes beach col -->
 
 
         <!-- MSW data -->
-        <div class="col-md-3">
-            <table class="table-nonfluid">
-                <thead>
-                    <tr>
-                        <th>Swell</th>
-                        <th>Wind</th>
-                    </tr>
-                </thead>
-                 
-                <tbody>
-                    <tr>    
-                        <td><div title="{{entry.swell1_dir_deg_global}}&deg; {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
-                            {{entry.swell1_ht}} ft. @ {{entry.swell1_per}} sec</td>
-                        <td><div title="{{entry.wind_dir_deg}}&deg;" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <div class="col-md-3"> <!-- MSW col -->
+
+            <div class="row" id = "row-title"> <!-- title row inside MSW col -->
+                <h3>Conditions:</h3>
+            </div>  <!-- closes title row inside MSW col -->
+
+            <div class="row"> <!-- content row inside MSW col -->
+                <table class="table-nonfluid">
+                    <thead>
+                        <tr>
+                            <th>Swell</th>
+                            <th>Wind</th>
+                        </tr>
+                    </thead>
+                     
+                    <tbody>
+                        <tr>    
+                            <td><div title="{{entry.swell1_dir_deg_global}}&deg; {{entry.swell1_dir_comp}}" class="msw-swa msw-swa-{{entry.swell1_arrow_deg}}"> </div>
+                                {{entry.swell1_ht}} ft. @ {{entry.swell1_per}} sec</td>
+                            <td><div title="{{entry.wind_dir_deg}}&deg;" class="msw-ssa msw-ssa-{{entry.wind_arrow_deg}}"> </div> <br> {{entry.wind_speed}} ({{entry.wind_gust}})</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div> <!-- closes MSW col -->
 
     </div>  <!-- closes top row -->
 
 
+    <div class="row"> <!-- middle row -->
 
-    <div class="row">
+        <div class="col-md-4"> <!-- board col -->
 
-        <div class="col-md-1">
+            <div class="row" id = "row-title"> <!-- title row inside board col -->
+                <h3>Board Info:</h3>
+            </div>  <!-- closes title row inside board col -->
+                
+            <div class="row"> <!-- content row inside board col -->
 
-                {% if entry.board.category %}
-                    <div class="icon-board">
-                        <img src="/static/img/icon_board_{{entry.board.category}}.png" title="{{entry.board.category}}"></a>
-                    </div>
-                {% endif %}
-        </div>
+                <div class="col-md-4"> <!-- board icon col -->
+                    {% if entry.board.category %}
+                        <div class="icon-board">
+                            <img src="/static/img/icon_board_{{entry.board.category}}.png" title="{{entry.board.category}}"></a>
+                        </div>
+                    {% endif %}
+                </div> <!-- closes board icon col -->
 
-        <div class="col-md-3">
-            <h4>
-                Board: {{entry.board.nickname}}
-                {% if entry.board.length_ft %}
-                    {{entry.board.length_ft}}' {{entry.board.length_in}}"
-                {% endif %}
-                {% if entry.board.fins %}
-                    ({{entry.board.fins}})
-                {% endif %}
+                <div class="col-md-8"> <!-- board info col -->
+                    <h4>
+                        {{entry.board.nickname}}
+                        {% if entry.board.length_ft %}
+                            {{entry.board.length_ft}}' {{entry.board.length_in}}"
+                        {% endif %}
+                        {% if entry.board.fins %}
+                            ({{entry.board.fins}})
+                        {% endif %}
 
-                {% if entry.board_pref == "ok" %}
-                {% else %}
-                    (wanted a {{entry.board_pref}} board)
-                {% endif %}
-                {% if entry.board_notes%}
-                    : {{entry.board_notes}}
-                {% endif %}
+                        {% if entry.board_pref == "ok" %}
+                        {% else %}
+                            (wanted a {{entry.board_pref}} board)
+                        {% endif %}
+                        {% if entry.board_notes%}
+                            : {{entry.board_notes}}
+                        {% endif %}
 
-            </h4>
-        </div> <!-- closes board col -->
+                    </h4>
+                </div> <!-- closes board info col -->
+
+            </div>  <!-- closes content row inside board col -->
+
+        </div>  <!-- closes board col -->
+
 
         <!-- user ratings -->
-        <div class="col-md-8">
-            <h4>
-                {% if entry.rate_wave_challenge %}
-                    Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}<br>
-                {% endif %}
+        <div class="col-md-8"> <!-- ratings col -->
 
-                {% if entry.rate_wave_fun %}
-                    Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}<br>
-                {% endif %}
+            <div class="row" id = "row-title"> <!-- title row inside ratings col -->
+                <h3>Ratings Info:</h3>
+            </div>  <!-- closes title row inside ratings col -->
+                
+            <div class="row"> <!-- content row inside ratings col -->
+                <h4>
+                    {% if entry.rate_wave_challenge %}
+                        Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}<br>
+                    {% endif %}
 
-                {% if entry.rate_crowd_den %}
-                    Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}<br>
-                {% endif %}
+                    {% if entry.rate_wave_fun %}
+                        Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}<br>
+                    {% endif %}
 
-                {% if entry.rate_crowd_vibe %}
-                    Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}<br>
-                {% endif %}
+                    {% if entry.rate_crowd_den %}
+                        Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}<br>
+                    {% endif %}
 
-                Overall fun level:
-                {% if entry.go_out == "N" %}
-                    looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)
-                {% else %}
-                    {{overall_fun_dict[entry.rate_overall_fun]}} 
-                {% endif %}
-            </h4>
+                    {% if entry.rate_crowd_vibe %}
+                        Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}<br>
+                    {% endif %}
+
+                    Overall fun level:
+                    {% if entry.go_out == "N" %}
+                        looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)
+                    {% else %}
+                        {{overall_fun_dict[entry.rate_overall_fun]}} 
+                    {% endif %}
+                </h4>
+            </div>  <!-- closes content row inside ratings col -->
+
         </div> <!-- closes ratings col -->
 
     </div>  <!-- closes middle row -->
 
-    <div class="row">
-        <div class="col-md-12">
 
+    <div class="row"> <!-- bottom row -->
+
+        <div class="col-md-12"> <!-- user notes on session -->
             {% if entry.gen_notes %}
                 <h4>
                 Overall experience: {{entry.gen_notes}}
                 </h4>
             {% endif %}
+        </div> <!-- closes user notes on session -->
 
-        </div>
     </div> <!-- closes bottom row -->
 
 
