--- a/templates/surf_entry_details.html
+++ b/templates/surf_entry_details.html
@@ -29,7 +29,8 @@
             {% endif %}
             </h2>
 
-            <h3>{{entry.date_time_start.strftime('%m/%d/%Y %I:%m %p')}}
+            <h3>{{entry.date_time_start.strftime('%m/%d/%Y')}}
+                <small>{{entry.date_time_start.strftime('%I:%m %p')}}</small>
             {% if entry.go_out == "N" %}
                 <small>(condition check: did not go out)</small>
             {% endif %}
@@ -40,7 +41,7 @@
                 <h3>(went out with {{entry.buddy_name}})</h3>
             {% else %}
                 {% if entry.go_out == "Y" %}
-                <h4>(Solo)</h4>
+                <h2><small>(Went out solo)</small></h2>
                 {% endif %}
             {% endif %}
 
@@ -88,7 +89,7 @@
                 
             <div class="row"> <!-- content row inside board col -->
 
-                <div class="col-md-4"> <!-- board icon col -->
+                <div class="col-md-2"> <!-- board icon col -->
                     {% if entry.board.category %}
                         <div class="icon-board">
                             <img src="/static/img/icon_board_{{entry.board.category}}.png" title="{{entry.board.category}}"></a>
@@ -96,8 +97,9 @@
                     {% endif %}
                 </div> <!-- closes board icon col -->
 
-                <div class="col-md-8"> <!-- board info col -->
+                <div class="col-md-10 col-board"> <!-- board info col -->
                     <h4>
+                        <p>
                         {{entry.board.nickname}}
                         {% if entry.board.length_ft %}
                             {{entry.board.length_ft}}' {{entry.board.length_in}}"
@@ -105,13 +107,14 @@
                         {% if entry.board.fins %}
                             ({{entry.board.fins}})
                         {% endif %}
+                        </p>
 
                         {% if entry.board_pref == "ok" %}
                         {% else %}
-                            (wanted a {{entry.board_pref}} board)
+                            <p>(wanted a {{entry.board_pref}} board)</p>
                         {% endif %}
                         {% if entry.board_notes%}
-                            : {{entry.board_notes}}
+                            <p>Notes on board: {{entry.board_notes}}</p>
                         {% endif %}
 
                     </h4>
@@ -121,9 +124,11 @@
 
         </div>  <!-- closes board col -->
 
+        <div class="col-md-4"> <!-- space between board and ratings col -->
+        </div> <!-- closes space between board and ratings col -->
 
         <!-- user ratings -->
-        <div class="col-md-8"> <!-- ratings col -->
+        <div class="col-md-4"> <!-- ratings col -->
 
             <div class="row" id = "row-title"> <!-- title row inside ratings col -->
                 <h3>Ratings Info:</h3>
@@ -132,26 +137,26 @@
             <div class="row"> <!-- content row inside ratings col -->
                 <h4>
                     {% if entry.rate_wave_challenge %}
-                        Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}<br>
+                        <p>Wave challenge level: {{wave_challenge_dict[entry.rate_wave_challenge]}}</p>
                     {% endif %}
 
                     {% if entry.rate_wave_fun %}
-                        Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}<br>
+                        <p>Wave fun level: {{wave_fun_dict[entry.rate_wave_fun]}}</p>
                     {% endif %}
 
                     {% if entry.rate_crowd_den %}
-                        Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}<br>
+                        <p>Crowd density: {{crowd_den_dict[entry.rate_crowd_den]}}</p>
                     {% endif %}
 
                     {% if entry.rate_crowd_vibe %}
-                        Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}<br>
+                        <p>Crowd vibe: {{crowd_vibe_dict[entry.rate_crowd_vibe]}}</p>
                     {% endif %}
 
-                    Overall fun level:
+                    <p>Overall fun level:
                     {% if entry.go_out == "N" %}
-                        looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)
+                        looked {{overall_fun_dict[entry.rate_overall_fun]}} (condition check)</p>
                     {% else %}
-                        {{overall_fun_dict[entry.rate_overall_fun]}} 
+                        {{overall_fun_dict[entry.rate_overall_fun]}}</p>
                     {% endif %}
                 </h4>
             </div>  <!-- closes content row inside ratings col -->
@@ -165,9 +170,11 @@
 
         <div class="col-md-12"> <!-- user notes on session -->
             {% if entry.gen_notes %}
+                <span class="title-center">
                 <h4>
-                Overall experience: {{entry.gen_notes}}
+                Notes on overall experience: {{entry.gen_notes}}
                 </h4>
+            </span>
             {% endif %}
         </div> <!-- closes user notes on session -->
 
