--- a/templates/surf_entry_add.html
+++ b/templates/surf_entry_add.html
@@ -36,7 +36,7 @@
 			<input type="time" name="end_time"> -->
 			<!--  -->
 			<!--  -->
-			<h4> This entry will be automatically created with today's date and the current time.</h4>
+			<h4> (this entry will automatically use today's date and the current time)</h4>
 			<!-- <h5> Ability to specify past dates/ times will be implemented later.</h5>
 			 -->
 		</span>
@@ -47,7 +47,6 @@
 	<div class="row"> <!-- main row -->
 
 		<div class="col-md-6"> <!-- left col -->
-
 
 			<br>
 			<!-- location info -->
@@ -72,7 +71,7 @@
 
 			<h5>Did you go out?</h5>
 			<input type="radio" name = "go_out" required value = "Y"> Yes!
-			<input type="radio" name = "go_out" value = "N"> No (I just checked the conditions)
+			<input type="radio" name = "go_out" value = "N"> No (Select no if you just checked the conditions)
 
 			<h5>Did you go out with a buddy?</h5>
 			<input type="text" name = "buddy_name" maxlength="64" size="64" placeholder="(if so put their name(s) here)">
@@ -91,14 +90,14 @@
 				{% endfor %}
 			</select>
 
-			<a href="/board_quiver" class="btn btn-sm btn-default" target="_blank">add a board to quiver</a> 
+			<a href="/board_quiver" class="btn btn-xs btn-default" target="_blank">add a board to quiver</a> 
 			<br>
 
 			<h5>Did you wish you'd brought a different board?:</h5>
 			<input type="radio" name = "board_pref" required value = "smaller">(smaller)
 			<input type="radio" name = "board_pref" value = "ok">(just right)
 			<input type="radio" name = "board_pref" value = "bigger">(bigger)
-			<h5>Any notes on board choice?</h5>
+			<h5>Any notes on your board choice?</h5>
 			<input type="text" name = "board_notes" maxlength="64" size="64" placeholder="(optional notes about how this board worked for you this session)">
 			<br>
 			<br>
