--- a/templates/about.html
+++ b/templates/about.html
@@ -20,74 +20,54 @@
 <div class="content-container">
 
 
-	<h2>TO DO:<br>
-	rewrite list to turn into an "about" page 
+	<h2>
+		Welcome to the Ocean Riders' Journal
 	</h2>
 
-	<div>
-		<h3>Make a journal report for today's session:</h3>
-		<br>
-		(Date/ time automatically generated at time of entry)
-		
-		<div>
-			<h4>User-supplied inputs:</h4>
-			<ul>
-				<br>
-				<h4>Location</h4>
-				<li>choose from list of northern and central ca beaches</li>
-				<li>add spot notes: specific part of beach or other beach near existing option</li>
-				<br>
-				<h4>Board used:</h4>
-				<li>Choose from (or add board to) stored quiver</li>
-				<li>rate whether board was right size for the conditions</li>
-				<li>optional notes about board</li>
-				<br>
-				<h4>Subjective User Ratings:</h4>
-				<li>Crowd density</li>
-				<li>Crowd vibe</li>
-				<li>Challenge level of waves</li>
-				<li>Fun level of waves</li>
-				<li>Fun level of session overall</li>
-				<br>
-				<h4>Additional (optional) User input:</h4>
-				<li>Who you surfed with, if anyone</li>
-				<li>general notes on the session</li>
-				<br>
-			</ul>
-		</div>
+	<p>
+	Ocean Rider’s Journal is a place for Northern and Central California surfers to record their time in the ocean. The journal collects swell and wind data based on time and location, and combines it with subjective user ratings to visually graph the best conditions for the user. develop a keener sense of what conditions work best for them at their favorite spots.
+	</p>
 
-		<div></div>
-			<h4>API-generated data based on date, time, and location of entry</h4>
-			<ul>
-				<li>Swell height </li>
-				<li>Swell period </li>
-				<li>Swell direction </li>
-				<li>Wind speed</li>
-				<li>Wind direction</li>
-			</ul>
-		</div>
-	</div>
 
-	<!-- about me/ bio -->
+	<h5>
+	To make an entry, users choose from a list of beaches, 
+
+	 conditions 
+	</h5>
 
 	<!-- about hackbright/ the project/ technology used -->
+	<h4>About the Ocean Riders' Journal</h4>
+	<p>
+	This webapp uses a Python controller and a Flask web framework. The SQLite database collects information provided by users about their surf sessions, the boards they ride, and the wind and swell conditions at the time of each journal entry. Weather data is gathered from the magicseaweed.com API. 
+	</p>
 
-	<!-- thanks to mentors, advisor, teachers, TAs -->
+	<!-- thanks to mentors, advisor, teachers, TAs, friends and family -->
+	<p>
+	Ocean Rider’s Journal was made at Hackbright Academy as my final project for the Winter 2015 cohort. 
+	</p>
 
-	<!-- thanks to friends and family -->
+	<p>
+	Ocean Rider’s Journal uses a Python controller and a Flask web framework. The SQLite database collects information provided by users about their surf sessions, the boards they ride, and the wind and swell conditions at the time of each journal entry. Weather data is gathered from the magicseaweed.com API. 
+	</p>
+
+	<p>
+	Many thanks to all the amazing Hackbright teachers and TAs (especially my advisor Katie LeFevre), and my very inspiring mentors.
+	I am also deeply indebted to my irreplaceable collection of friends and family, all of whom encouraged me to make the jump to Hackbright. 
+	</p>
 
 	<!-- credit to artists of images used? -->
+	<p>
+	Weather data is gathered from <a href="http://magicseaweed.com/developer/api">the magicseaweed API.</a> Thanks to <a href="http://www.juniorbill.com">Junior Bill</a> for lending me his classic surboard artwork for the quiver icons.
+	</p>
 
-</div>
+	<!-- about me/ bio -->
+	<h3>
+	<a href="www.linkedin.com/in/www.linkedin.com/in/kborges">Connect with the developer</a>
+	</h3>
 
 
+</div> <!-- closes content container -->
 
-<!-- credit to the API -->
-<div class = "msw">
-    <a href="http://magicseaweed.com"><img src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
-    <br>
-    <h5 class = "msw">Surf condtion data from magicseaweed.com</h5> 
-</div>
 
 
 {% endblock %}
