--- a/templates/board_quiver.html
+++ b/templates/board_quiver.html
@@ -21,6 +21,7 @@
     <table class="table table-hover">
         <thead>
         	<tr>
+                <th></th>
             	<th>Board's nickname</th>
             	<th>Length</th> 
                 <th>Type</th>
@@ -33,7 +34,12 @@
          
         <tbody>
             {% for board in boards %}
-        	<tr>    
+        	<tr>
+                <td>
+                    <div class="icon-board-sm">
+                        <img src="/static/img/icon_board_{{board.category}}_sm.png" title="{{board.category}}"></a>
+                    </div>
+                </td>    
             	<td>{{board.nickname}} </td>
                 <td>
                 {% if board.length_ft %}
