added beach names to bubble labels.

--- a/templates/surf_entries_summary.html
+++ b/templates/surf_entries_summary.html
@@ -86,7 +86,8 @@ $(function () {
 
         tooltip: {
             formatter: function () {
-                return this.x + 'ft @' + this.y +
+                return this.series.name + ": " +
+                    this.x + 'ft @' + this.y +
                     '°' + ' -> rated: ' + this.point.z;
             }
         },
